--- a/auto_heal/azure-pipelines-4.yml
+++ b/auto_heal/azure-pipelines-4.yml
@@ -1,36 +1,15 @@
-name: Python application
+trigger:
+  branches:
+    include:
+    - master  # Adjust the branch name as per your needs
 
-on:
-  push:
-    branches: [ "main" ]
-  
+pool:
+  vmImage: 'ubuntu-latest'  # Use a suitable image depending on your requirements
 
-permissions:
-  contents: read
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install selenium
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        python new.py
+steps:
+- script: |
+    python -m pip install --upgrade pip
+    pip install openpyxl
+    pip install -r auto_heal/requirements.txt  # If you have any Python package dependencies, list them in requirements.txt
+    python auto_heal/your_selenium_script.py  # Replace "your_selenium_script.py" with your actual Python script name
+  displayName: 'Run Selenium Test'
