--- a/auto_heal/azure-pipelines-4.yml
+++ b/auto_heal/azure-pipelines-4.yml
@@ -9,6 +9,7 @@ pool:
 steps:
 - script: |
     python -m pip install --upgrade pip
+    pip install selenium
     pip install openpyxl
     pip install -r auto_heal/requirements.txt  # If you have any Python package dependencies, list them in requirements.txt
     python auto_heal/new.py  # Replace "your_selenium_script.py" with your actual Python script name
